cambios cv y proyectos

--- a/public/myProjects.html
+++ b/public/myProjects.html
@@ -11,7 +11,8 @@
     <div class="misProyectos">
         <h2>Mis proyectos <i class='fa fa-rocket' style='font-size:24px'></i></h2>
         <ul>
-        <li>Aplicación web para controlar los gastos diarios: Laravel + PHP + JS + SQL + HTML + CSS <a href="http://ec2-51-20-127-127.eu-north-1.compute.amazonaws.com" target="_blank">LINK DEMO</a><hr></li>
+        <li>Aplicación web para gestionar los partidos de los Jueves: Django + Python + JS + SQL + HTML + CSS <a href="https://futbol7lagranja.pythonanywhere.com/" target="_blank">LINK DEMO</a><hr></li>
+        <li>Aplicación web para controlar los gastos diarios: Laravel + PHP + JS + SQL + HTML + CSS <a href="http://ec2-51-20-127-127.eu-north-1.compute.amazonaws.com" target="_blank">LINK DEMO (desactivado temporalmente)</a><hr></li>
         <li>Aplicación web gestión de muestras de laboratorio: Django + Python + JS + SQL + HTML + CSS <a href="https://laboratorioaguera.pythonanywhere.com" target="_blank">LINK DEMO</a><hr></li>
         <li>Aplicación web clínica dental: Django + Python + JS + SQL + HTML + CSS + Photoshop <a href="https://mymdental.pythonanywhere.com/" target="_blank">LINK DEMO</a><hr></li>
         <li>Aplicación web sobre plantas medicinales: Django + Python + JS + SQL + HTML + CSS + Photoshop + JSON <a href="https://maragubit.pythonanywhere.com/" target="_blank">LINK DEMO</a><hr></li>
